# Read2MD-Studio

./: .gitignore  LICENSE  README-EN.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
scripts/: analyze-wechat-import.ts  debug-wechat-import.ts
server/: fetchHtml.mjs  importUrl.mjs  pageFetch.mjs  wechatFetch.mjs  wechatImage.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  codex_usage.rs  lib.rs
src/components/: AiModal.tsx  AiResultActions.tsx  BrandLogo.tsx  DocumentList.tsx  EditorPane.tsx  HeadingLevelsEditor.tsx  ImportDialog.tsx  PreviewPane.tsx  SettingsModal.tsx  ThemeActions.tsx  ThemeCustomizer.tsx  ThemePanel.tsx  ThemeSelector.tsx  Toolbar.tsx  WorkspaceSplit.tsx  editorImageExtension.ts
src/core/ai/: aiActions.ts  codexClient.ts  i18nActions.ts  models.ts  parseProgress.ts  presets.ts  types.ts
src/core/assets/: assetStorage.ts  assetTypes.ts  browserAssetStorage.ts  downloadImage.ts  imageUrl.ts  inlineAssets.ts  localizeImages.ts  readAsset.ts  resolveAssets.ts  saveUserImage.ts
src/core/copy/: copyHtml.ts
src/core/document/: documentTypes.ts
src/core/export/: domScreenshot.ts  exportLongImage.ts
src/core/import/: extractThemeTokens.ts  fetchHtmlClient.ts  fetchImportUrl.ts  (+10 more)
src/fixtures/: sampleMarkdown.ts
src/i18n/: index.ts
src/store/: aiStore.ts  editorStore.ts
src/styles/: globals.css
(+17 files in other folders)
